--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
+    "pact-lang-api": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "pact:seed": "./initialize-contract.sh 9001",
+    "start:pact": "rm -Rf ./log && mkdir log && pact --serve server.conf",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
